--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -99,13 +99,13 @@ layout: default
       {%- include author_skills.html -%}
     </div>
 
-<!--     {% if site.wakatime_username %}
-    <div class="card">
+    {% if site.wakatime_username %}
+<!--     <div class="card">
       <h1>Coding Activity</h1>
 
       {%- include coding_activity.html -%}
-    </div>
-    {% endif %} -->
+    </div> -->
+    {% endif %}
   </div>
   <div class="col-lg-8">
     {% if site.author_bio %}
