--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -100,11 +100,11 @@ layout: default
     </div>
 
     {% if site.wakatime_username %}
-<!--     <div class="card">
-      <h1>Coding Activity</h1>
+    <div class="card">
+<!--       <h1>Coding Activity</h1>
 
-      {%- include coding_activity.html -%}
-    </div> -->
+      {%- include coding_activity.html -%} -->
+    </div>
     {% endif %}
   </div>
   <div class="col-lg-8">
