--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -100,10 +100,10 @@ layout: default
     </div>
 
     {% if site.wakatime_username %}
-    <div class="card">
-<!--       <h1>Coding Activity</h1>
+    <div class="card" style="display: none;">
+      <h1>Coding Activity</h1>
 
-      {%- include coding_activity.html -%} -->
+      {%- include coding_activity.html -%}
     </div>
     {% endif %}
   </div>
